[build-system]
requires = ["setuptools>=61.2.0", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "UniGrammar"
authors = [{name = "KOLANICH"}]
description = "A DSL for writing grammars implementing EBNF transpiled into DSLs specific to parsers generators"
readme = "ReadMe.md"
keywords = ["grammars", "ANTLR", "CoCo/R", "parglare", "waxeye", "TatSu", "parsimonious", "YAML"]
license = {text = "Unlicense"}
classifiers = [
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: Public Domain",
	"Operating System :: OS Independent",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Security",
	"Topic :: Text Processing",
]
requires-python = ">=3.4"
dependencies = [
	"UniGrammarRuntime", # @ https://codeberg.org/UniGrammar/UniGrammarRuntime.py
	"icecream", # @ git+https://github.com/gruns/icecream.git
	"charRanges", # @ git+https://codeberg.org/UniGrammar/charRanges.py.git
	"escapelib", # @ git+https://codeberg.org/UniGrammar/escapelib.py.git
	"plumbum", # @ git+https://github.com/tomerfiliba/plumbum.git
]
dynamic = ["version"]

[project.urls]
Homepage = "https://codeberg.org/UniGrammar/UniGrammar.py"

[project.scripts]
UniGrammar = "UniGrammar.__main__:UniGrammarCLI.run"

[tool.setuptools]
zip-safe = true
include-package-data = true

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools_scm]

[tool.pylint."MESSAGES CONTROL"]
disable = ["invalid-name", "missing-docstring", "no-else-return", "C0330", "too-few-public-methods"]

[tool.pylint.FORMAT]
max-line-length = 100500
indent-string = '\t'
